fixed white space to right problem on index page

--- a/app/assets/stylesheets/components/_index.scss
+++ b/app/assets/stylesheets/components/_index.scss
@@ -4,6 +4,15 @@
 @import "card";
 @import "mixins";
 
+html,body
+{
+    width: 100%;
+    height: 100%;
+    margin: 0px;
+    padding: 0px;
+    overflow-x: hidden;
+}
+
 /* LOGO */
 .logo {
   color: white;
